# vriden

./: .gitignore  .hgignore  CMakeLists.txt  bam.lua  build.bat  projgen.bat  rtshader.hlsl
configs/: common.lua  debug.lua  release.lua
projects/ecstest/: ecstest.lua
projects/ecstest/src/: ecstest.cpp
projects/vriden/: vriden.lua
projects/vriden/data/materials/: default.material
projects/vriden/src/: material_creator.cpp  mesh_creator.cpp  resource_context.h  shader_creator.cpp  texture_creator.cpp  vriden.cpp
src/: allocator.cpp  allocator.h  array.h  assert.cpp  assert.h  cidpool.h  circular_queue.h  condition.cpp  condition.h  detect.h  file.cpp  file.h  hash.cpp  hash.h  job_system.cpp  job_system.h  main.cpp  mutex_internal.h  objpool.h  resource_cache.cpp  table.h  thread.cpp  thread.h  vfs.cpp  vfs.h  vfs_mount_fs.h  vriden.cpp  vriden.lua  window.h
src/jobs/: dummy.cpp
src/tests/: test_cobjpool.cpp  test_idpool.cpp  test_table.cpp
steps/: addtools.lua  build.lua  init.lua  patch.lua  projgen.lua
targets/: windows.lua  winx64.lua
units/application/: application.lua
units/application/include/: application.h
units/application/src/: application.cpp
units/foundation/include/: idpool.h  job_system.h  mutex.h  range_pool.h  resource_cache.h  thread.h  time.h
units/foundation/src/: allocator.cpp  assert.cpp  condition.cpp  file.cpp  hash.cpp  job_system.cpp  mutex.cpp  mutex_internal.h  resource_cache.cpp  thread.cpp  time.cpp  vfs.cpp  vfs_mount_fs.cpp
units/game/: game.lua
units/game/src/: ecs.cpp
units/graphics/: graphics.lua
units/graphics/include/: render.h
units/graphics/src/: materialc.cpp  meshc.cpp  render_common.cpp  render_common.h  render_dx12.cpp  render_dx12.h  render_metal.h  render_metal.mm  render_null.cpp  render_null.h  render_vulkan.cpp  render_vulkan.h  shaderc.cpp  shaderc_dx12.cpp  shaderc_vulkan.cpp  texturec.cpp
units/graphics/types/: material.tld  material_intermediate.tld  mesh.tld  mesh_intermediate.tld  shader.tld  shader_intermediate.tld  texture.tld  vertex_layout.tld
(+29 files in other folders)
